# rsterm

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  debian-packages.yml
android/: settings.gradle  signing.properties
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nonpolynomial/btleplug/android/impl/: Adapter.java  Peripheral.java  ScanFilter.java
android/app/src/main/java/dev/rsTerminal/app/: RsTerminalActivity.java
android/app/src/main/java/dev/rsterm/app/: RsTerminalActivity.java
android/app/src/main/java/io/github/gedgygedgy/rust/future/: Future.java  FutureException.java  SimpleFuture.java
android/app/src/main/java/io/github/gedgygedgy/rust/ops/: FnAdapter.java  FnBiFunction.java  FnBiFunctionImpl.java  FnFunction.java  FnFunctionImpl.java  FnRunnable.java  FnRunnableImpl.java
android/app/src/main/java/io/github/gedgygedgy/rust/panic/: PanicException.java
android/app/src/main/java/io/github/gedgygedgy/rust/stream/: QueueStream.java  Stream.java  StreamPoll.java
android/app/src/main/java/io/github/gedgygedgy/rust/task/: PollResult.java  Waker.java
android/app/src/main/java/io/github/gedgygedgy/rust/thread/: LocalThreadException.java
android/app/src/main/res/values/: strings.xml
android/keystores/: rsTerminal-release.keystore  rsterm-release.keystore
docs/: ble-terminal-profiles.md
examples/esp32c3_dual_uart_nimble/: esp32c3_dual_uart_nimble.ino
locales/: en.yml  zh-CN.yml
packaging/: android-env.sh  build-apk.sh  build-deb.sh  rsTerminal.desktop  rsterm.desktop
scripts/: check-apk-btleplug-java.sh
src/: app.rs  config.rs  fonts.rs  i18n.rs  lib.rs  main.rs  session.rs  settings.rs
src/connection/: ble.rs  enumeration.rs  local.rs  mod.rs  pty_burst.rs  serial.rs  ssh.rs  ssh_keys.rs  winchg.rs
src/fs/: entry_info.rs  local.rs  mod.rs  sftp.rs  transfer_progress.rs
src/platform/: android.rs  android_back.rs  android_btleplug.rs  android_ime.rs  android_storage.rs  ble.rs  desktop.rs  mod.rs  process.rs  serial.rs  shell.rs
src/storage/: mod.rs  types.rs
src/terminal/: cursor.rs  metrics.rs  mod.rs  paint.rs  parser.rs  renderer.rs  screen.rs
src/ui/: clipboard.rs  connection_view.rs  devices.rs  dialogs.rs  file_manager.rs  file_transfer.rs  home.rs  home_sidebar.rs  keyboard.rs  mod.rs  settings_page.rs  sidebar.rs  sidebar_common.rs  style.rs  terminal_grid.rs  terminal_input.rs  terminal_mouse.rs  terminal_paint.rs  terminal_selection.rs  terminal_sidebar.rs
src/ui/page/: mod.rs
src/ui/page/file_manager/: mod.rs
src/ui/page/home/: mod.rs  recent.rs  sidebar.rs
src/ui/page/settings/: mod.rs
src/ui/page/terminal/: grid.rs  input.rs  mod.rs  mouse.rs  paint.rs  selection.rs
src/ui/widget/: clipboard.rs  dialogs.rs  keyboard.rs  mod.rs  style.rs
src/ui/widget/sidebar/: common.rs  mod.rs  session_list.rs  sidebars.rs  terminal_sidebar.rs
