[package]
name = "rsterm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = { version = "0.31", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
log = "0.4"
env_logger = "0.11"
russh = "0.53"
serialport = "4"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
btleplug = "0.11"
uuid = { version = "1", features = ["v4"] }
arboard = { version = "3", features = ["wayland-data-control"] }
unicode-width = "0.2"
libc = "0.2"
ssh2 = "0.9"
