[package]
name = "rsterm"
version = "0.2.1"
edition = "2024"
description = "Multi terminal emulator with SSH, serial, BLE, and dual-pane file manager"
license = "MIT"
readme = "README.md"

[lib]
name = "rsterm"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "rsterm"
path = "src/main.rs"

[profile.release]
strip = "symbols"

[package.metadata.deb]
maintainer = "rsTerm DingVero <dingvero@outlook.com>"
copyright = "2026, rsTerm DingVero"
license-file = ["LICENSE", "4"]
extended-description = """\
rsTerm is a desktop terminal emulator with SSH, local PTY, serial, BLE,\
and an integrated dual-pane file manager.\
"""
section = "utils"
priority = "optional"
depends = "libc6 (>= 2.31), libgcc-s1, libxcb1, libxkbcommon0, libegl1, libgles2, libwayland-client0, libasound2, libfontconfig1, libfreetype6, libdbus-1-3, libx11-6, libxi6, libxrandr2, libudev1 | libudev0"
assets = [
    ["target/release/rsterm", "usr/bin/rsterm", "755"],
    ["packaging/rsterm.desktop", "usr/share/applications/rsterm.desktop", "644"],
]

[dependencies]
egui = { version = "0.34", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
log = "0.4"
env_logger = "0.11"
russh = "0.60"
russh-sftp = "2.1"
serialport = "4"
tokio = { version = "1", features = ["full"] }
btleplug = "0.12"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = "0.34"
portable-pty = "0.9"
arboard = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "android-native-activity"] }
android_logger = "0.15"
android_clipboard = "0.1"
winit = { version = "0.30", features = ["android-native-activity"] }
jni = "0.22"
